--- a/react-fundamentals-solution-express/src/components/App/App.css
+++ b/react-fundamentals-solution-express/src/components/App/App.css
@@ -1,8 +1,9 @@
-
-
+@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;600&display=swap');
 /* Sticky footer */
-/* #root, body, html {
+#root, body, html {
   height: 100%;
+  font-family: 'Figtree', sans-serif;
+  font-weight: 300;
 }
 
 .App {
@@ -10,7 +11,3 @@
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
-
-.App .something {
-
-} */
