--- a/react-fundamentals-solution-express/src/components/POPOSSpace/POPOSSpace.css
+++ b/react-fundamentals-solution-express/src/components/POPOSSpace/POPOSSpace.css
@@ -11,7 +11,7 @@
 
 .POPOSSpace .POPOSSpace-title {
   text-decoration: none;
-  color: #000;
+  color: rgba(255, 255, 255, 0.565);
 }
 
 .POPOSSpace h1 {
@@ -21,7 +21,7 @@
 	top: 0;
 	margin: 0;
 	font-weight: lighter;
-	background-color: rgba(255, 255, 255, 0.80);
+	background-color: rgb(79, 101, 79);
 	padding: 1rem;
 	text-align: left;
 }
