--- a/react-express-client/src/components/POPOSDetails/POPOSDetails.css
+++ b/react-express-client/src/components/POPOSDetails/POPOSDetails.css
@@ -27,3 +27,29 @@
 .POPOSDetails .POPOSDetails-hours {
 	font-size: 1.5em;
 }
+
+@media only screen and (max-width: 480px) {
+    .POPOSDetails {
+        width: 100%;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+    }
+
+	.POPOSDetails .POPOSDetails-info {
+		text-align: center;
+	}
+}
+
+@media only screen and (max-width: 960px) {
+	.POPOSDetails {
+		width: 100%;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.POPOSDetails .POPOSDetails-info {
+		text-align: center;
+	}
+}
