--- a/react-express-client/src/components/POPOSFeatureList/POPOSFeatureList.css
+++ b/react-express-client/src/components/POPOSFeatureList/POPOSFeatureList.css
@@ -1,3 +1,15 @@
 .POPOSFeatureList {
 	display: flex;
 }
+
+@media screen and (max-width: 960px) {
+	.POPOSFeatureList {
+		justify-content: center;
+	}
+}
+	
+@media screen and (max-width: 480px) {
+	.POPOSFeatureList {
+		justify-content: center;
+	}
+}
