--- a/react-fundamentals-solution-express/src/components/POPOSList/POPOSList.css
+++ b/react-fundamentals-solution-express/src/components/POPOSList/POPOSList.css
@@ -1,10 +1,12 @@
 .POPOSList-grid {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	/* grid-template-columns: 1fr 1fr 1fr; */
 	grid-gap: 2em;
 	/* max-width: 1200px;
 	margin: auto; */
 	padding: 2em;
+	/* grid-template-columns: repeat((1, minmax((0, 1fr)))); */
+	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 
@@ -15,7 +17,8 @@
 	align-items: flex-start;
 }
 
-.POPOSList form input, .POPOSList form button {
+.POPOSList form input,
+.POPOSList form button {
 	padding: 1em;
 	margin: 0;
 	border: 1px solid;
@@ -36,11 +39,20 @@
 	border: 1px solid #000;
 }
 
-@media only screen and (max-width: 960px) {
-	.POPOSList {
-		grid-template-columns: 1fr 1fr;
+@media screen and (min-width:900px) {
+	.POPOSList-grid {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+
 	}
 }
+@media screen and (min-width:1100px) {
+	.POPOSList-grid {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+
+	}
+}
+
+@media only screen and (max-width: 960px) {}
 
 @media only screen and (max-width: 700px) {
 	.POPOSList {
